force-app/main/default/objects/Test_Deploy__c/Test_Deploy__c.object-meta.xml
<CustomObject
     >
    <historyRetentionPolicy n1:nil="true" />
    <label>Test_Deploy</label>
    <nameField>
        <label>Test_Deploy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test_Deploys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>