force-app/main/default/objects/Test_Deploy__c/fields/DeplDate__c.field-meta.xml
<CustomField>
    <fullName>DeplDate__c</fullName>
    <label>DeplDate</label>
    <type>Date</type>
</CustomField>