force-app/main/default/objects/Test_Deploy__c/fields/test_cb__c.field-meta.xml
<CustomField>
    <fullName>test_cb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test_cb</label>
    <type>Checkbox</type>
</CustomField>