force-app/main/default/objects/Test_Deploy__c/fields/Test_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Test_Deploy__c</fullName>
    <label>Test_Deploy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>